--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,31 @@
     <string name="female">Female</string>
     <string name="btn_sign_up">Sign Up</string>
     <string name="btn_link_login">Login</string>
+    <string name="facebook_app_id">205538013529415</string>
+    <string name="loginButton">FBbtn</string>
+    <string name="postStatusUpdateButton">Post Status Update</string>
+    <string name="postPhotoButton">Post Photo</string>
+    <string name="getInterestsButton">Get Interests !!</string>
 
 
+
+    <string name="cancelled">Cancelled</string>
+    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
+    <string name="ok">OK</string>
+    <string name="hello_user">Hello %1$s!</string>
+    <string name="success">Success</string>
+    <string name="successfully_posted_post">Post ID: %1$s</string>
+    <string name="error">Error</string>
+    <string name="status_update">Updating status for %1$s at %2$s</string>
+    <string name="photo_post">Photo Post</string>
+    <string name="you_picked">You picked:</string>
+    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
+    <string name="no_place_selected">&lt;No place selected&gt;</string>
+    <string name="pick_seattle_place">Pick a Seattle Place</string>
+    <string name="app_id">355198514515820</string>
+    <string name="exception">Exception: %1$s</string>
 </resources>
+
+
+
+
