--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="pick_seattle_place">Pick a Seattle Place</string>
     <string name="app_id">355198514515820</string>
     <string name="exception">Exception: %1$s</string>
+    <string name="btnFacebook">Excep</string>
+
 </resources>
 
 
