--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
     <string name="getInterestsButton">Get Interests !!</string>
 
 
-
     <string name="cancelled">Cancelled</string>
     <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
     <string name="ok">OK</string>
@@ -46,6 +45,7 @@
     <string name="app_id">205538013529415</string>
     <string name="exception">Exception: %1$s</string>
     <string name="btnFacebook">Excep</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
 
